tests/baselines/reference/structNotExtendingClass.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structNotExtendingClass.ts(7,18): error TS8003: A struct may only extend another struct.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structNotExtendingClass.ts (1 errors) ====
    class C {
    	foo: string;
    	thing() { }
        static other() { }
    }
    
    struct D extends C { // error, struct can only extend struct
                     ~
!!! error TS8003: A struct may only extend another struct.
    	bar: string;
    }
    